[gd_scene load_steps=24 format=2]

[ext_resource path="res://Recursos/Montserrat-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Contenedores/VBoxContainerDatos.tscn" type="PackedScene" id=2]
[ext_resource path="res://Recursos/Montserrat-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Pantallas/Login.gd" type="Script" id=4]
[ext_resource path="res://Recursos/Montserrat-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Pantallas/PantallaEstudiante.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pantallas/PantallaDocente.tscn" type="PackedScene" id=7]
[ext_resource path="res://Contenedores/Spinner.tscn" type="PackedScene" id=8]
[ext_resource path="res://Recursos/Imágenes/Logo esquina EPT.png" type="Texture" id=9]
[ext_resource path="res://Pantallas/PantallaPadre.tscn" type="PackedScene" id=10]
[ext_resource path="res://Pantallas/PantallaAdmin.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.980392, 0.984314, 0.984314, 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 17
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.866667, 0.258824, 0.258824, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.184314, 0.211765, 0.25098, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PanelInicioDeSesion/LabelInvalido:custom_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.258824, 0.258824, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "movimiento_error"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PanelInicioDeSesion/VBoxContainerDatos:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 53, 125.5 ), Vector2( 53, 204 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelInicioDeSesion/LabelInvalido:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PanelInicioDeSesion/Spinner:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "parpadeo_invalido"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PanelInicioDeSesion/LabelInvalido:custom_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.258824, 0.258824, 1 ), Color( 0.611765, 0.168627, 0.168627, 1 ), Color( 0.866667, 0.258824, 0.258824, 1 ), Color( 0.611765, 0.168627, 0.168627, 1 ), Color( 0.866667, 0.258824, 0.258824, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelInicioDeSesion/Spinner:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "repligue_movimiento_error"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PanelInicioDeSesion/VBoxContainerDatos:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 53, 204 ), Vector2( 53, 125.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelInicioDeSesion/LabelInvalido:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="PantallaInicioDeSesion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
escenaDocente = ExtResource( 7 )
escenaEstudiante = ExtResource( 6 )
escenaPadre = ExtResource( 10 )
escenaAdmin = ExtResource( 11 )

[node name="ColorRectFondo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.823529, 1, 1 )

[node name="PanelSuperior" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 124.0
custom_styles/panel = SubResource( 4 )

[node name="HSeparatorSuperior" type="HSeparator" parent="PanelSuperior"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = 2.0

[node name="LabelSistema" type="Label" parent="PanelSuperior"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.5
margin_top = -54.0
margin_right = 261.5
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Sistema de gestión
Educar para Transformar"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="PanelSuperior"]
anchor_right = 1.0
margin_left = 22.0
margin_top = 3.0
margin_right = -1786.0
margin_bottom = 120.0
texture = ExtResource( 9 )

[node name="PanelInicioDeSesion" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -429.0
margin_top = -262.0
margin_right = 429.0
margin_bottom = 262.0
custom_styles/panel = SubResource( 1 )

[node name="HSeparator" type="HSeparator" parent="PanelInicioDeSesion"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
margin_top = 80.0
margin_bottom = 84.0

[node name="LabelIS" type="Label" parent="PanelInicioDeSesion"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -158.0
margin_top = 13.5
margin_right = 158.0
margin_bottom = 69.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Iniciar Sesión"
align = 1
valign = 1

[node name="VBoxContainerDatos" parent="PanelInicioDeSesion" instance=ExtResource( 2 )]
margin_left = -376.0
margin_top = -136.5
margin_right = 376.0
margin_bottom = 161.5

[node name="LabelCE" parent="PanelInicioDeSesion/VBoxContainerDatos" index="0"]
margin_right = 752.0

[node name="LineEdit" parent="PanelInicioDeSesion/VBoxContainerDatos" index="1"]
margin_right = 752.0

[node name="LabelContraseña" parent="PanelInicioDeSesion/VBoxContainerDatos" index="2"]
margin_right = 752.0

[node name="LineEditContrasenha" parent="PanelInicioDeSesion/VBoxContainerDatos" index="3"]
margin_right = 752.0

[node name="HSeparator" parent="PanelInicioDeSesion/VBoxContainerDatos" index="4"]
margin_right = 752.0

[node name="ButtonIS" parent="PanelInicioDeSesion/VBoxContainerDatos" index="5"]
margin_right = 752.0

[node name="LabelInvalido" type="Label" parent="PanelInicioDeSesion"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -376.0
margin_top = 125.0
margin_right = 376.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Correo electrónico o contraseña inválido"
align = 1
valign = 1

[node name="Spinner" parent="PanelInicioDeSesion" instance=ExtResource( 8 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -82.0
margin_top = 19.5
margin_right = -34.0
margin_bottom = 67.5

[node name="PanelInferior" type="Panel" parent="."]
self_modulate = Color( 1, 0.968627, 0.968627, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
custom_styles/panel = SubResource( 3 )

[node name="HSeparatorInferior" type="HSeparator" parent="PanelInferior"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
margin_top = -1.0
margin_bottom = 3.0

[node name="LabelDerechos" type="Label" parent="PanelInferior"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.0
margin_top = 35.0
margin_right = 58.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 6 )
text = "Team Ozono"
align = 1
valign = 1

[node name="LabelTeam" type="Label" parent="PanelInferior"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -275.0
margin_top = 11.0
margin_right = 275.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 6 )
text = " Educar para Transformar 2001-2023 | Todos los derechos Reservados."
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/movimiento_error = SubResource( 9 )
anims/parpadeo_invalido = SubResource( 10 )
anims/repligue_movimiento_error = SubResource( 11 )

[node name="LoginRequest" type="HTTPRequest" parent="."]

[node name="GetRole" type="HTTPRequest" parent="."]

[node name="GetFullName" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelInicioDeSesion/VBoxContainerDatos/ButtonIS" to="." method="_on_ButtonIS_pressed"]
[connection signal="request_completed" from="LoginRequest" to="." method="_on_LoginRequest_request_completed"]
[connection signal="request_completed" from="GetRole" to="." method="_on_GetRole_request_completed"]
[connection signal="request_completed" from="GetFullName" to="." method="_on_GetFullName_request_completed"]

[editable path="PanelInicioDeSesion/VBoxContainerDatos"]
